--- a/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
+++ b/config/crd/bases/rollout.kusionstack.io_rollouts.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -95,12 +96,14 @@ spec:
                     description: Kind is the type of resource being referenced
                     type: string
                   match:
-                    description: Match indicates how to match workloads. only one workload should be matches in one cluster
+                    description: Match indicates how to match workloads. only one
+                      workload should be matches in one cluster
                     properties:
                       names:
                         description: Names is a list of workload name
                         items:
-                          description: CrossClusterObjectNameReference contains cluster and name reference to a k8s object
+                          description: CrossClusterObjectNameReference contains cluster
+                            and name reference to a k8s object
                           properties:
                             cluster:
                               description: Cluster indicates the name of cluster
@@ -113,17 +116,20 @@ spec:
                           type: object
                         type: array
                       selector:
-                        description: Selector is a label query over a set of resources, in this case resource
+                        description: Selector is a label query over a set of resources,
+                          in this case resource
                         properties:
                           matchExpressions:
-                            description: matchExpressions is a list of label selector requirements. The requirements are ANDed.
+                            description: matchExpressions is a list of label selector
+                              requirements. The requirements are ANDed.
                             items:
                               description: |-
                                 A label selector requirement is a selector that contains values, a key, and an operator that
                                 relates the key and values.
                               properties:
                                 key:
-                                  description: key is the label key that the selector applies to.
+                                  description: key is the label key that the selector
+                                    applies to.
                                   type: string
                                 operator:
                                   description: |-
@@ -171,7 +177,8 @@ spec:
                     See: https://github.com/kubernetes/community/blob/master/contributors/devel/sig-architecture/api-conventions.md#typical-status-properties
                   properties:
                     lastTransitionTime:
-                      description: Last time the condition transitioned from one status to another.
+                      description: Last time the condition transitioned from one status
+                        to another.
                       format: date-time
                       type: string
                     lastUpdateTime:
@@ -179,7 +186,8 @@ spec:
                       format: date-time
                       type: string
                     message:
-                      description: A human-readable message indicating details about the transition.
+                      description: A human-readable message indicating details about
+                        the transition.
                       type: string
                     reason:
                       description: The reason for the condition's last transition.
